fix: base implementation of making conditional menuitems disabled but visible

--- a/client/styles/components/_nav.scss
+++ b/client/styles/components/_nav.scss
@@ -119,6 +119,16 @@
       color: getThemifyVariable('button-hover-color');
     }
   }
+
+  &.nav__dropdown-item--disabled {
+    & button,
+    & a {
+      pointer-events: none;
+      @include themify() {
+        color: getThemifyVariable('button-nav-inactive-color');
+      }
+    }
+  }
 }
 
 .nav__item--no-icon {
